Fix the metricChooser select overflow #696

--- a/visualization/app/codeCharta/ui/metricChooser/metricChooser.component.scss
+++ b/visualization/app/codeCharta/ui/metricChooser/metricChooser.component.scss
@@ -68,6 +68,10 @@ edge-chooser-component {
 		top: 45px !important;
 	}
 
+	.md-overflow {
+		display: initial;
+	}
+
 	.metric-search {
 		display: block;
 		position: fixed;
